add files for testing in real

--- a/real/c-24-25-gtest/test/CMakeLists.txt
+++ b/real/c-24-25-gtest/test/CMakeLists.txt
@@ -15,7 +15,10 @@ enable_testing()
 
 add_executable(
     my-lib-tests
-    # ------------
+    algorithm_ut.cpp
+    array_ut.cpp
+    matchers.hpp
+    serialization_ut.cpp
 )
 
 target_link_libraries(
